--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
 
     <!-- Start ¿Qué es Neek’dna? -->
-    <section class="container py-5">
-        <div class="row text-center py-5">
+    <section class="container py-2 px-5">
+        <div class="row text-center">
             <div class="col-lg-8 m-auto">
-                <h1 class="h2">¿Qué es Neek’dna?</h1>
+                <h1 class="landing-title mb-4">¿Qué es Neek’dna?</h1>
                 <p class="gray-text">
                     Pasión por el arte corporal, respeto por tu piel.<br>
                     Nuestro compromiso es acompañarte antes, durante y
@@ -159,9 +159,9 @@
             </div>
         </div>
         <!-- Embajadores-->
-        <div class="row text-center py-5 d-none d-lg-block">
-            <div class="col-lg-8 m-auto mb-5">
-                <h1 class="h2">Nuestros Embajadores</h1>
+        <div class="row text-center py-3 d-none d-lg-block">
+            <div class="col-lg-8 m-auto">
+                <h1 class="landing-title mb-4">Nuestros Embajadores</h1>
                 <p class="gray-text">
                     Ellos usan, recomiendan y confían en Neek’dna porque han comprobado su eficacia y compromiso.
                 </p>
@@ -235,9 +235,9 @@
         <!-- End Embajadores-->
 
         <!-- Embajadores Small Devices-->
-        <div class="row text-center py-5 d-lg-none">
-            <div class="col-lg-8 m-auto mb-5">
-                <h1 class="h2">Nuestros Embajadores</h1>
+        <div class="row text-center py-3 d-lg-none">
+            <div class="col-lg-8 m-auto">
+                <h1 class="landing-title mb-4">Nuestros Embajadores</h1>
                 <p class="gray-text">
                     Ellos usan, recomiendan y confían en Neek’dna porque han comprobado su eficacia y compromiso.
                 </p>
@@ -323,9 +323,9 @@
 
 
         <!-- Líneas-->
-        <div class="row text-center py-5">
-            <div class="col-lg-8 m-auto mb-5">
-                <h1 class="h2">Nuestras Líneas</h1>
+        <div class="row text-center py-3">
+            <div class="col-lg-8 m-auto">
+                <h1 class="landing-title mb-4">Nuestras Líneas</h1>
             </div>
 
             <div class="col-lg-12 m-auto tempaltemo-carousel">
@@ -390,15 +390,15 @@
         <!-- End Líneas-->
 
 
-        <div class="row text-center py-5">
-            <div class="col-lg-11 m-auto mb-5">
-                <h1 class="h2">Síguenos en TikTok</h1>
+        <div class="row text-center py-3">
+            <div class="col-lg-11 m-auto">
+                <h1 class="landing-title mb-2">Síguenos en TikTok</h1>
                 <p class="gray-text">
                     Nuestra comunidad está formada por personas que valoran su cuerpo como un lienzo
                 </p>
             </div>
         </div>
-        <div class="row text-center py-5">
+        <div class="row text-center py-3">
             <div class="col-lg-11 m-auto mb-5">
                 <!-- Elfsight TikTok Feed | Untitled TikTok Feed -->
                 <script src="https://static.elfsight.com/platform/platform.js" async></script>
@@ -407,9 +407,9 @@
             </div>
         </div>
 
-        <div class="row text-center py-5">
+        <div class="row text-center py-3">
             <div class="col-lg-8 m-auto mb-5">
-                <h1 class="h2">¡Te queremos conocer!</h1>
+                <h1 class="landing-title mb-4">¡Te queremos conocer!</h1>
                 <h2 class="text-orange">Contacto</h2>
 
                 <div id="mc_embed_shell">
@@ -499,37 +499,37 @@
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="assets/img/icons/instagram.svg" /></a>
+                                <img src="assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="assets/img/icons/tiktok.svg" /></a>
+                                <img src="assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="assets/img/icons/facebook.svg" /></a>
+                                <img src="assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="assets/img/icons/shop.svg" /></a>
+                                <img src="assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="assets/img/whatsapp.svg" /></a>
+                                <img src="assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
                 </div>
             </div>
