--- a/producto/skin-tattoo-moisturiser.html
+++ b/producto/skin-tattoo-moisturiser.html
@@ -174,21 +174,23 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
+                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
+                                        Beneficios
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapsePrecauciones">
+                                <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        No aplique en piel recién tatuada.
-                                        Para uso externo solamente.
-                                        Evite el contacto con los ojos.
-                                        En caso de molestias, descontinúe su uso y consulte a su médico.
-                                        No se deje al alcance de los niños.
+                                        Aceite de Almendras Dulces (Prunus Amygdalus Dulcis Oil)
+                                        Aceite de Pepita de Uva (Vitis Vinifera Seed Oil)
+                                        Glicerina (Glyceril)
+                                        Manteca de Karité (Butyrospermum Parkii Butter)
+                                        Provitamina B5 (Dexpantenol)
+                                        Tocoferol (Vitamina E)
                                     </div>
                                 </div>
                             </div>
+
                             <div class="collapse-bg">
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
@@ -209,44 +211,22 @@
                             </div>
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
-                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
-                                        Beneficios
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
+                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
+                                        Precauciones
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapseBeneficios">
+                                <div class="collapse" id="collapsePrecauciones">
                                     <div class="card collapse-body">
-                                        Aceite de Almendras Dulces (Prunus Amygdalus Dulcis Oil)
-                                        Aceite de Pepita de Uva (Vitis Vinifera Seed Oil)
-                                        Glicerina (Glyceril)
-                                        Manteca de Karité (Butyrospermum Parkii Butter)
-                                        Provitamina B5 (Dexpantenol)
-                                        Tocoferol (Vitamina E)
+                                        No aplique en piel recién tatuada.
+                                        Para uso externo solamente.
+                                        Evite el contacto con los ojos.
+                                        En caso de molestias, descontinúe su uso y consulte a su médico.
+                                        No se deje al alcance de los niños.
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecaucioness"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecaucioness">
-                                        Recomendaciones de Uso
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapsePrecaucioness">
-                                    <div class="card collapse-body">
-                                        Aplicar Neek´dna Crema Humectante sobre la piel sana con tatuajes que desee
-                                        proteger del sol y humectar, atendiendo las siguientes recomendaciones
-                                        Agite Neek’dna Crema Humectante antes de usarla.
-                                        Aplique Neek’dna Crema Humectante sobre la zona que presente resequedad o se
-                                        encuentre expuesta al sol.
-                                        Extienda gentilmente sobre la piel hasta su total absorción.
-                                        Mantenga la piel protegida y humectada aplicando Neek’dna Crema Humectante
-                                        varias veces al día.
-                                        Recomendable para piel normal a seca.
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- End Info Section -->
@@ -259,14 +239,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -382,30 +362,30 @@
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
