--- a/producto/piercing-aftercare-sol.html
+++ b/producto/piercing-aftercare-sol.html
@@ -174,21 +174,21 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
+                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
+                                        Beneficios
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapsePrecauciones">
+                                <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
-                                        cicatrización.<br>
-                                        No exponerse al sol.<br>
-                                        Suspenda su empleo si se presentan signos de irritación, sarpullido o
-                                        hipersensibilidad a los ingredientes.<br>
+                                        Neek'dna Solución de limpieza para uso dermatológico ayuda a limpiar gentilmente
+                                        la perforación sin irritación, ni ardor.<br>
+                                        Previene infecciones al eliminar residuos y bacterias.<br>
+                                        Favorece el tener una cicatrización más rápida y segura.<br>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="collapse-bg">
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
@@ -204,20 +204,22 @@
                             </div>
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
-                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
-                                        Beneficios
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
+                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
+                                        Precauciones
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapseBeneficios">
+                                <div class="collapse" id="collapsePrecauciones">
                                     <div class="card collapse-body">
-                                        Neek'dna Solución de limpieza para uso dermatológico ayuda a limpiar gentilmente
-                                        la perforación sin irritación, ni ardor.<br>
-                                        Previene infecciones al eliminar residuos y bacterias.<br>
-                                        Favorece el tener una cicatrización más rápida y segura.<br>
+                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
+                                        cicatrización.<br>
+                                        No exponerse al sol.<br>
+                                        Suspenda su empleo si se presentan signos de irritación, sarpullido o
+                                        hipersensibilidad a los ingredientes.<br>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
 
                         <!-- End Info Section -->
@@ -230,14 +232,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -353,30 +355,30 @@
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
@@ -393,7 +395,6 @@
 
     </footer>
     <!-- End Footer -->
-
     <!-- Start Script -->
     <script src="../assets/js/jquery-1.11.0.min.js"></script>
     <script src="../assets/js/jquery-migrate-1.2.1.min.js"></script>
