--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -173,39 +173,6 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapsePrecauciones">
-                                    <div class="card collapse-body">
-                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
-                                        cicatrización.
-                                        No exponerse al sol. . Suspenda su empleo si se presentan signos de irritación,
-                                        sarpullido o hipersensibilidad a . . los ingredientes.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
-                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
-                                        Ingredientes Activos
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapseIngredientes">
-                                    <div class="card collapse-body">
-                                        Extracto de Aloe Vera (Aloe Barbadensis)
-                                        Extracto de Caléndula (Caléndula Officinalis)
-                                        Extracto de Lavanda (Lavandula Angustifolia)
-                                        Extracto de Manzanilla (Chamomilla Recutita)
-                                        Manteca de Karité (Butyrospermum Parkii Butter)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="collapse-bg">
-                                <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
                                         role="button" aria-expanded="false" aria-controls="collapseBeneficios">
                                         Beneficios
@@ -226,28 +193,38 @@
 
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecaucioness"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecaucioness">
-                                        Recomendaciones de Uso
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
+                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
+                                        Ingredientes Activos
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapsePrecaucioness">
+                                <div class="collapse" id="collapseIngredientes">
                                     <div class="card collapse-body">
-                                        Lavarse las manos antes de tener contacto con el producto.
-                                        Lavar la zona en donde se aplicará Neek'dna Pomada Humectante, preferentemente
-                                        con
-                                        un
-                                        jabón neutro.
-                                        Dejar que la piel seque completamente.
-                                        Aplicar ligeras capas de Neek'dna Pomada Humectante, cubriendo de manera
-                                        uniforme y
-                                        dando un suave masaje, dos a tres veces al día.
-                                        Mantener la piel tatuada hidratada diariamente con la aplicación de Neek'dna
-                                        Pomada
-                                        Humectante.
+                                        Extracto de Aloe Vera (Aloe Barbadensis)
+                                        Extracto de Caléndula (Caléndula Officinalis)
+                                        Extracto de Lavanda (Lavandula Angustifolia)
+                                        Extracto de Manzanilla (Chamomilla Recutita)
+                                        Manteca de Karité (Butyrospermum Parkii Butter)
                                     </div>
                                 </div>
                             </div>
+                            <div class="collapse-bg">
+                                <div class="row">
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
+                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
+                                        Precauciones
+                                    </a>
+                                </div>
+                                <div class="collapse" id="collapsePrecauciones">
+                                    <div class="card collapse-body">
+                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
+                                        cicatrización.
+                                        No exponerse al sol. . Suspenda su empleo si se presentan signos de irritación,
+                                        sarpullido o hipersensibilidad a . . los ingredientes.
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
 
                         <!-- End Info Section -->
@@ -260,14 +237,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -393,30 +370,30 @@
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
