--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -172,21 +172,23 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
+                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
+                                        Beneficios
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapsePrecauciones">
+                                <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
-                                        cicatrización.<br>
-                                        No exponerse al sol.<br>
-                                        Suspenda su empleo si se presentan signos de irritación, sarpullido o
-                                        hipersensibilidad a los ingredientes.<br>
+                                        Neek'dna Gel Limpiador para tatuajes elimina la suciedad, grasa y residuos de
+                                        células muertas de la piel.<br>
+                                        Es apropiado para todo tipo de piel, sobre todo sensibles e irritadas.<br>
+                                        Cuenta con las certificaciones Soil Association y Ecocert.<br>
+                                        Es un producto con ingredientes de origen orgánico.<br>
+                                        Es un producto libre de alcohol, parabenos y crueldad anima<br>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="collapse-bg">
                                 <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
@@ -207,46 +209,22 @@
                             </div>
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
-                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
-                                        Beneficios
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
+                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
+                                        Precauciones
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapseBeneficios">
+                                <div class="collapse" id="collapsePrecauciones">
                                     <div class="card collapse-body">
-                                        Neek'dna Gel Limpiador para tatuajes elimina la suciedad, grasa y residuos de
-                                        células muertas de la piel.<br>
-                                        Es apropiado para todo tipo de piel, sobre todo sensibles e irritadas.<br>
-                                        Cuenta con las certificaciones Soil Association y Ecocert.<br>
-                                        Es un producto con ingredientes de origen orgánico.<br>
-                                        Es un producto libre de alcohol, parabenos y crueldad anima<br>
+                                        Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
+                                        cicatrización.<br>
+                                        No exponerse al sol.<br>
+                                        Suspenda su empleo si se presentan signos de irritación, sarpullido o
+                                        hipersensibilidad a los ingredientes.<br>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecaucioness"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecaucioness">
-                                        Recomendaciones de Uso
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapsePrecaucioness">
-                                    <div class="card collapse-body">
-                                        Lava tus manos antes de usar el gel para evitar contaminar la piel y el
-                                        producto.<br>
-                                        Humedece el área a limpiar.<br>
-                                        Aplica un poco de gel en las yemas de los dedos y da un masaje suave circular
-                                        sobre la piel hasta generar espuma, permitiendo así que los ingredientes
-                                        comiencen a trabajar en tu piel.<br>
-                                        Enjuaga con abundante agua templada o fría hasta retirar por completo la
-                                        espuma.<br>
-                                        Seca por completo la zona con una toalla desechable y procede a la aplicación de
-                                        tu "Pomada Humectante para después de tatuarse" lo cual ayudará a la pronta
-                                        recuperación de la piel.<br>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- End Info Section -->
@@ -259,14 +237,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -386,36 +364,37 @@
     </section>
 
 
+
     <!-- Start Footer -->
     <footer class="bg-dark" id="tempaltemo_footer">
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
