--- a/producto/tattoo-moisturizing-balm.html
+++ b/producto/tattoo-moisturizing-balm.html
@@ -174,38 +174,6 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
-                                        Precauciones
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapsePrecauciones">
-                                    <div class="card collapse-body">
-                                        Suspenda su empleo si se presentan signos de irritación, sarpullido o
-                                        hipersensibilidad a los ingredientes.<br>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
-                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
-                                        Ingredientes Activos
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapseIngredientes">
-                                    <div class="card collapse-body">
-                                        Extracto de Aloe Vera (Aloe Barbadensis)<br>
-                                        Extracto de Árnica (Arnica Montana)<br>
-                                        Extracto de Caléndula (Caléndula Officinalis)<br>
-                                        Extracto de Lavanda (Lavandula Angustifolia)<br>
-                                        Extracto de Manzanilla (Chamomilla Recutita)<br>
-                                        Manteca de Karité (Butyrospermum Parkii Butter)<br>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="collapse-bg">
-                                <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
                                         role="button" aria-expanded="false" aria-controls="collapseBeneficios">
                                         Beneficios
@@ -226,22 +194,34 @@
 
                             <div class="collapse-bg">
                                 <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecaucioness"
-                                        role="button" aria-expanded="false" aria-controls="collapsePrecaucioness">
-                                        Recomendaciones de Uso
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
+                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
+                                        Ingredientes Activos
                                     </a>
                                 </div>
-                                <div class="collapse" id="collapsePrecaucioness">
+                                <div class="collapse" id="collapseIngredientes">
                                     <div class="card collapse-body">
-                                        Al momento de tatuar, aplique sobre la piel ligeras capas de Neek’dna Bálsamo
-                                        humectante para crear una barrera aislante entre la piel, el ambiente y los
-                                        restos del
-                                        pigmento facilitando la limpieza de la zona.<br>
-                                        Para no contaminar el producto, tome la cantidad necesaria del bálsamo con un
-                                        abatelenguas y posteriormente deséchelo. <br>
+                                        Extracto de Aloe Vera (Aloe Barbadensis)<br>
+                                        Extracto de Árnica (Arnica Montana)<br>
+                                        Extracto de Caléndula (Caléndula Officinalis)<br>
+                                        Extracto de Lavanda (Lavandula Angustifolia)<br>
+                                        Extracto de Manzanilla (Chamomilla Recutita)<br>
+                                        Manteca de Karité (Butyrospermum Parkii Butter)<br>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="collapse-bg">
+                                <div class="row">
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
+                                        role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
+                                        Precauciones
+                                    </a>
+                                </div>
+                                <div class="collapse" id="collapsePrecauciones">
+                                    <div class="card collapse-body">
                                         Suspenda su empleo si se presentan signos de irritación, sarpullido o
-                                        hipersensibilidad a
-                                        los ingredientes.<br>
+                                        hipersensibilidad a los ingredientes.<br>
                                     </div>
                                 </div>
                             </div>
@@ -257,14 +237,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -372,37 +352,36 @@
     </section>
 
 
-
     <!-- Start Footer -->
     <footer class="bg-dark" id="tempaltemo_footer">
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
