--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -171,6 +171,40 @@
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
+                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
+                                        Beneficios
+                                    </a>
+                                </div>
+                                <div class="collapse" id="collapseBeneficios">
+                                    <div class="card collapse-body">
+                                        Neek'dna Absorbente de residuos puede solidificar hasta 50 veces su propio peso
+                                        en
+                                        minutos, lo cual permite tener un mejor control y más higiénico manejo de los
+                                        residuos
+                                        acuosos infecciosos resultantes del proceso de tatuado en el área de trabajo,
+                                        además de
+                                        hacer más sencillo y seguro su posterior deshecho.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="collapse-bg">
+                                <div class="row">
+                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
+                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
+                                        Ingredientes Activos
+                                    </a>
+                                </div>
+                                <div class="collapse" id="collapseIngredientes">
+                                    <div class="card collapse-body">
+                                        Polímero absorbente.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="collapse-bg">
+                                <div class="row">
                                     <a class="collapse-title" data-bs-toggle="collapse" href="#collapsePrecauciones"
                                         role="button" aria-expanded="false" aria-controls="collapsePrecauciones">
                                         Precauciones
@@ -190,38 +224,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseIngredientes"
-                                        role="button" aria-expanded="false" aria-controls="collapseIngredientes">
-                                        Ingredientes Activos
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapseIngredientes">
-                                    <div class="card collapse-body">
-                                        Polímero absorbente.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="collapse-bg">
-                                <div class="row">
-                                    <a class="collapse-title" data-bs-toggle="collapse" href="#collapseBeneficios"
-                                        role="button" aria-expanded="false" aria-controls="collapseBeneficios">
-                                        Beneficios
-                                    </a>
-                                </div>
-                                <div class="collapse" id="collapseBeneficios">
-                                    <div class="card collapse-body">
-                                        Neek'dna Absorbente de residuos puede solidificar hasta 50 veces su propio peso
-                                        en
-                                        minutos, lo cual permite tener un mejor control y más higiénico manejo de los
-                                        residuos
-                                        acuosos infecciosos resultantes del proceso de tatuado en el área de trabajo,
-                                        además de
-                                        hacer más sencillo y seguro su posterior deshecho.
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- End Info Section -->
@@ -234,14 +236,14 @@
         <div class="row">
             <div class="container d-lg-none">
                 <div class="row text-center mt-4">
-                    <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <h3>GARANTÍA TATTOO AFTERCARE</h3>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
             <div class="row text-center mt-4 d-none d-lg-flex">
                 <div class=" col-lg-8 m-auto ">
                     <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
-                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4 guarantee-img">
                 </div>
             </div>
         </div>
@@ -357,30 +359,30 @@
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="../assets/img/icons/instagram.svg" /></a>
+                                <img src="../assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="../assets/img/icons/tiktok.svg" /></a>
+                                <img src="../assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="../assets/img/icons/facebook.svg" /></a>
+                                <img src="../assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="../assets/img/icons/shop.svg" /></a>
+                                <img src="../assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="../assets/img/whatsapp.svg" /></a>
+                                <img src="../assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
