--- a/productos.html
+++ b/productos.html
@@ -93,7 +93,7 @@
 
 
     <!-- Start ¿Qué es Neek’dna? -->
-    <section class="container pt-0 pb-3">
+    <section class="container pt-0 pb-3 py-2 px-5">
         <div class="row text-center lines-title">
             <div class="col-lg-8 m-auto ">
                 <h1 class="h2">Nuestras líneas Neek’dna</h1>
@@ -104,16 +104,16 @@
             <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> TATTOO AFTERCARE</h2>
                 <div class="row">
-                    <div class="col-6">
-                        <img src="assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 text-center">
+                        <img src="assets/img/products/tattoo_aftercare/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Aftercare</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-aftercare.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <img src="assets/img/products/tattoo_cleansing_gel/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 text-center">
+                        <img src="assets/img/products/tattoo_cleansing_gel/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Cleansing Gel</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-cleansing-gel.html"><button type="button"
@@ -126,8 +126,8 @@
             <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> TATTOO SKINCARE</h2>
                 <div class="row">
-                    <div class="col-6">
-                        <img src="assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 text-center">
+                        <img src="assets/img/products/skin_tattoo_moist/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Skin Tattoo Moisturiser</h3>
                         <div class="product-button-container">
                             <a href="/producto/skin-tattoo-moisturiser.html"><button type="button"
@@ -143,16 +143,16 @@
             <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> PIERCING AFTERCARE</h2>
                 <div class="row">
-                    <div class="col-6">
-                        <img src="assets/img/products/piercing_aftercare_gel/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 text-center">
+                        <img src="assets/img/products/piercing_aftercare_gel/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Piercing Aftercare</h3>
                         <div class="product-button-container">
                             <a href="/producto/piercing-aftercare-gel.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <img src="assets/img/products/piercing_aftercare_sol/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 text-center">
+                        <img src="assets/img/products/piercing_aftercare_sol/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Piercing Aftercare</h3>
                         <div class="product-button-container">
                             <a href="/producto/piercing-aftercare-sol.html"><button type="button"
@@ -167,32 +167,32 @@
             <div class="col-12">
                 <h2 class="product-title">PRO-TEC</h2>
                 <div class="row">
-                    <div class="col-6 col-lg-3">
-                        <img src="assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 col-lg-3 text-center">
+                        <img src="assets/img/products/dermo_clean_foam/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Dermo Clean Foam</h3>
                         <div class="product-button-container">
                             <a href="/producto/dermo-clean-foam.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-3">
-                        <img src="assets/img/products/eco_recarga/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 col-lg-3 text-center">
+                        <img src="assets/img/products/eco_recarga/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">ECO-RECARGA Dermo Clean Foam</h3>
                         <div class="product-button-container">
                             <a href="/producto/eco-recarga-dermo-clean-foam.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-3">
-                        <img src="assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 col-lg-3 text-center">
+                        <img src="assets/img/products/tattoo_moist_balm/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Moisturizing Balm</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-moisturizing-balm.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-3">
-                        <img src="assets/img/products/waste_absorbent/front.png" alt="Image" class="img-fluid">
+                    <div class="col-6 col-lg-3 text-center">
+                        <img src="assets/img/products/waste_absorbent/cover.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Waste Absorbent</h3>
                         <div class="product-button-container">
                             <a href="/producto/waste-absorbent.html"><button type="button"
@@ -206,44 +206,43 @@
     </section>
     <!-- End Categories of The Month -->
 
-
     <!-- Start Footer -->
     <footer class="bg-dark" id="tempaltemo_footer">
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left">
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
-                                <img src="assets/img/icons/instagram.svg" /></a>
+                                <img src="assets/img/icons/instagram.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.tiktok.com/@neekdna">
-                                <img src="assets/img/icons/tiktok.svg" /></a>
+                                <img src="assets/img/icons/tiktok.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.facebook.com/NeekDna">
-                                <img src="assets/img/icons/facebook.svg" /></a>
+                                <img src="assets/img/icons/facebook.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.mercadolibre.com.mx/pagina/neekdna">
-                                <img src="assets/img/icons/shop.svg" /></a>
+                                <img src="assets/img/icons/shop.svg" height="30" width="30" /></a>
                         </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
+                        <li class="list-inline-item text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
-                                <img src="assets/img/whatsapp.svg" /></a>
+                                <img src="assets/img/whatsapp.svg" height="30" width="30" /></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
                 </div>
             </div>
@@ -253,6 +252,7 @@
 
     </footer>
     <!-- End Footer -->
+
 
     <!-- Start Script -->
     <script src="assets/js/jquery-1.11.0.min.js"></script>
