--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -364,7 +364,6 @@
     </section>
 
 
-
     <!-- Start Footer -->
     <footer class="bg-dark" id="tempaltemo_footer">
         <div class="container py-5">
@@ -401,14 +400,11 @@
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
                 </div>
             </div>
         </div>
-
-
-
     </footer>
     <!-- End Footer -->
 
