--- a/contacto.html
+++ b/contacto.html
@@ -164,8 +164,8 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="row text-center mt-4">
+        <div class="row container">
+            <div class="row text-center mt-1 col-10 m-auto">
                 <div class="col-lg-8 m-auto ">
                     <h1 class="guarantee-title">Neek’dna ofrece sus productos de cuidado para piel tatuada y piercings
                     </h1>
@@ -173,20 +173,21 @@
             </div>
         </div>
 
-        <div class="bg-gray  mt-4 mb-4 p-3">
-            <div class=" col-lg-8 m-auto row">
-                <div class="col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/showroom.svg" />
+        <div class="bg-gray  mt-4 mb-4 p-5">
+            <div class=" col-lg-8 m-auto row d-flex align-items-start">
+                <div class=" col-4 d-flex align-items-center justify-content-center flex-column">
+                    <img src="/assets/img/showroom.svg" height="60" width="60" />
                     <h3 class="icon-subtitle">Showroom CDMX: visítanos.</h3>
                 </div>
                 <div class="col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/marketplace.svg" />
-                    <h3 class="icon-subtitle">Todo Neek’dna a un clic</h3>
-                </div>
-                <div class="col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/artist.svg" />
+                    <img src="/assets/img/tattoo-artist.svg" height="60" width="60" />
                     <h3 class="icon-subtitle">¿Eres tatuador o piercer? Escríbenos.</h3>
                 </div>
+                <div class="col-4 d-flex align-items-center justify-content-center flex-column">
+                    <img src="/assets/img/marketplace.svg" height="60" width="60" />
+                    <h3 class="icon-subtitle">Todo Neek’dna a un clic</h3>
+                </div>
+
 
             </div>
         </div>
@@ -194,6 +195,9 @@
         <div class="row">
             <h2 class="more-products text-center">Showroom
             </h2>
+            <p class="text-center mb-4">
+                Visítanos en nuestro showroom en CDMX y conoce toda la línea Neek’dna.
+            </p>
             <div class="col-lg-8 m-auto">
                 <div class="col-12 iframe-container">
                     <iframe
