--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -351,8 +351,6 @@
         </div>
     </section>
 
-
-
     <!-- Start Footer -->
     <footer class="bg-dark" id="tempaltemo_footer">
         <div class="container py-5">
@@ -389,14 +387,11 @@
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
                 </div>
             </div>
         </div>
-
-
-
     </footer>
     <!-- End Footer -->
 
